# jlm

./: .gitignore  CMakeLists.txt  IncludeCIRCT.cmake  IncludeLLVM.cmake  Makefile.sub  tests_to_mlir.sh
jhls/: CMakeLists.txt
jlc/: CMakeLists.txt
jlm-hls/: CMakeLists.txt
jlm-opt/: CMakeLists.txt
jlm-print/: CMakeLists.txt
libjive/: CMakeLists.txt
libjlm/: CMakeLists.txt  Makefile.sub
libjlm/include/jlm/ir/: ipgraph.hpp  types.hpp
libjlm/include/jlm/ir/operators/: alloca.hpp  call.hpp  delta.hpp  getelementptr.hpp  lambda.hpp  load.hpp  store.hpp
libjlm/include/jlm/opt/alias-analyses/: LifetimeAwareMemoryNodeProvider.hpp  PointsToGraph.hpp  Steensgaard.hpp
libjlm/src/backend/hls/rvsdg2rhls/: rvsdg2rhls.cpp
libjlm/src/backend/llvm/jlm2llvm/: instruction.cpp
libjlm/src/frontend/llvm/: LlvmInstructionConversion.cpp  LlvmModuleConversion.cpp
libjlm/src/ir/: ipgraph.cpp
libjlm/src/ir/operators/: getelementptr.cpp  lambda.cpp
libjlm/src/opt/: inlining.cpp
libjlm/src/opt/alias-analyses/: LifetimeAwareMemoryNodeProvider.cpp  Steensgaard.cpp
mlir-print/: CMakeLists.txt  Makefile.sub  mlir-print.cpp
tests/: CMakeLists.txt  TestRvsdgs.cpp
tests/libjlm/backend/llvm/r2j/: test-recursive-data.cpp
tests/libjlm/ir/operators/: TestCall.cpp  TestLambda.cpp  test-delta.cpp
tests/libjlm/opt/: test-inlining.cpp
tests/libjlm/opt/alias-analyses/: Makefile.sub  TestLifetimeAwareMemoryNodeProvider.cpp
