cmake_minimum_required(VERSION 3.16)
project(jlm)
set(CMAKE_CXX_STANDARD 17)
add_compile_options(-Wall -Wpedantic -Wextra -Wno-unused-parameter -Wfatal-errors)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DJIVE_DEBUG -DJLM_DEBUG -DJLM_ENABLE_ASSERTS -DCIRCT -DHLS_USE_VCD")
set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR})
add_subdirectory(libjlm)
add_subdirectory(libjive)
add_subdirectory(jlm-opt)
add_subdirectory(jlm-print)
add_subdirectory(jlm-hls)
add_subdirectory(jhls)
add_subdirectory(jlc)
add_subdirectory(tests)